# expedition-server

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Readme.md  build-k3s.sh  justfile  scripts
migrations/: 20231113150029_create_rides.sql  20231113150029_create_rides.up.sql
src/: clients.rs  geocode.rs  main.rs  ride.rs  ride_geo.rs  ride_processing.rs
src/import/: gpx.rs
src/lib/: gpx.rs  mod.rs  ride.rs
src/net/: response.rs
src/types/: feature.rs  mod.rs  nominatim.rs  overpass.rs  ride.rs
src/types/dto/: geom.rs  mod.rs  nominatim.rs  ride.rs
src/types/model/: mod.rs  ride.rs
