[package]
name = "ausaudv-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing", "multipart"] }
color-eyre = "0.6.2"
geo-types = "0.7.11"
geojson = "0.24.1"
gpx = "0.9.1"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
