[package]
name = "expedition-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing", "multipart", "macros"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
color-eyre = "0.6.2"
futures = "0.3.28"
geo = "0.26.0"
geo-types = "0.7.11"
geojson = "0.24.1"
google_maps = { version = "3.3.2", features = [
  # Needed to decode latlngs to decimal
  "decimal-serde-float",
  # To convert from geo types to gmaps latlng
  "geo",
] }
gpx = "0.9.1"
num-traits = "0.2.17"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "bigdecimal",
] }
reqwest = { version = "0.11.22", features = ["json"] }
